feat(jei): 复用机器界面展示加工配方